# Evaluaciones

./: Ejercicio2.dig  Examen1.xlsx
Examen2_P2_2020/Bono/: R-2R.txt
Examen2_P2_2020/Ex1/: CMakeLists.txt  Exp.v  exp_by_squaring.c  exp_test.cpp
Examen2_P2_2020/Ex2/: CMakeLists.txt  gcd  gcd.c  gcd_test.cpp
Examen2_P2_2020/Ex2/verilog/: ALU.v  GPPM.v  GcdFSM.v  Main.v  RegFile.v
Prueba2_P2_2020_MultSigned4Bits/: MultS4Bits.v  MultS4Bits_tb.v  MultU4Bits.v  test.sh
proye/: Microhondas.dig  microhondas.v  reg.v
